     more-or-less synonymous with the ~updated~ number (which are the message that
     got (re)parsed / (re)added to the database.

     Basically, it counts all the messages for which we checked their timestamp.

   - The internals of the message handling in ~mu~ have been heavily reworked;
     much of this is not immediately visible but is an enabler for some new
     features.

   - the ~info~ command now includes information about the last indexing operation
     and the last database change that took place; note that the information may
     be slightly delayed due to database caching.

   - the ~verify~ command for checking signatures has been updated, and is more
     informative

   - a new command ~fields~ provides information about the message fields and
     flags for use in queries. The information is the same information that ~mu~
     uses and so stays up to date.

   - a new message field ~changed~, which refers to the time/date of the last time
     a message was changed (the file ~ctime~) and a new flag ~personal~ to search
     for "personal" messages, which are defined as a message with at least one
     personal contact.

   - message sexps are now cached in the store, which makes delivering
     sexp-based search results (as used by ~mu4e~) much faster.

   - Windows/MSYS support is deprecated; it doesn't work well (if at all) and
     there's currently not sufficient developer interest/expertise to change
     this.

*** mu4e

   - the old mu4e-view is *gone*; only the gnus-based one remains. This allowed
     for removing quite a bit of old code.

   - the mu4e headers rendering is much faster (a factor of 3+), which makes
     displaying big results snappier. This required some updates in the headers
     handling and in the server protocol. Separate from that, the cached
     message sexps (see the ~mu~ section) make getting the results much faster.
     This becomes esp. clear when there are a lot of query results.
