@@ -1,4 +1,4 @@
-.TH MU 1 "February 2021" "User Manuals"
+.TH MU 1 "May 2022" "User Manuals"
 
 .SH NAME
 
@@ -161,6 +161,12 @@ prints \fBmu\fR version and copyright information.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 lists the various command line options.
+
+.SH ENVIRONMENT
+
+\fBMUHOME\fR can be used as an alternative to \fB\-\-muhome\fR. The latter has precedence.
+
+\fBNO_COLOR\fR can be used as an alternative to \fB\-\-nocolor\fR.
 
 .SH ERROR CODES
 
